--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,6 +64,7 @@
   }
 
 @media (max-width: 1280px) {
+
   .footer {
 	  clip-path: polygon(0 0%, 100% 10%, 100% 100%, 0 100%);
 	  background-color: #2F4858;
@@ -71,6 +72,10 @@
 }
 
 @media (max-width: 1024px) {
+	.hero {
+		clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+	}
+
 	.team {
 		clip-path: polygon(0 0, 100% 3%, 100% 100%, 0 97%);
 		background-color: #2f4858;
